--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .container {
   max-width: 1400px;
   margin: 30px auto;
-  background: #ffffff;
+  background: #000000;
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
