--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   background: #121212;
   margin: 0;
   padding: 0;
-  color: #f0f0f0;
+  color: #FFA500;
 }
 
 .container {
@@ -42,7 +42,7 @@ button {
 }
 
 button:hover {
-  background: #0088cc;
+  background: #FFA500;
 }
 
 .top-nav {
