--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ button:hover {
 }
 
 .sub-nav a:hover {
-  color: #00aaff;
+  color: #FFA500;
   background-color: #1c1c1c;
   border-radius: 6px;
 }
