--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ button:hover {
 
 .dropdown-content a:hover {
   background-color: #2f2f2f;
-  color: #00aaff;
+  color: #FFA500;
 }
 
 .dropdown:hover .dropdown-content {
