--- a/style.css
+++ b/style.css
@@ -227,6 +227,10 @@ tr:hover {
     position: static;
     width: 100%;
   }
+  
+  .position-group {
+    flex: 100%;
+  }
 }
 
 .weight-panel {
@@ -247,16 +251,15 @@ tr:hover {
 .row-wrapper {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 20px;
   justify-content: space-between;
 }
-
 .position-group {
-  flex: 1 1 48%;
-  background-color: #f8f8f8;
-  padding: 20px;
+  flex: 1;
+  min-width: 300px;
+  background: #222;
+  padding: 15px;
   border-radius: 8px;
-  box-shadow: 0 0 12px rgba(0,0,0,0.1);
 }
 
 .position-group h3 {
