--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ tr:hover {
 
 /* === Table Type 2: Historical Box Score === */
 .table-type2 table {
+  display: none;
   table-layout: auto;
 }
 
