--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ tr:nth-child(even) {
 }
 
 .chip-container {
-  display: flex;
+  display: inline-block;
   flex-wrap: wrap;
   gap: 8px; /* Spacing between chips */
 }
