--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ tr:nth-child(even) {
   box-shadow: 0 0 0 2px rgba(255, 102, 0, 0.1);
 }
 
-.chip-container {
+.stats-chip {
   display: inline-block;
   flex-wrap: wrap;
   gap: 8px; /* Spacing between chips */
